MS Update (Fixed SVG Icons Size)

--- a/products/malva-blanca.html
+++ b/products/malva-blanca.html
@@ -182,10 +182,10 @@
                         <a aria-label="Propiedades" class="collapsible">
                             <div class="ms-prd-drop-div">
                                 <div class="ms-prd-divtitle">
-                                    <img src="https://misionessabor.com/images/icons/leaf-solid.svg"></img>
+                                    <img src="https://misionessabor.com/images/icons/leaf-solid.svg" height="25" width="25"></img>
                                     <h3 class="ms-prd-drop-title">Propiedades</h3>
                                 </div>
-                                <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg"></img> 
+                                <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg" width"25" height"25"></img> 
                             </div>
                         </a>
                         <div class="ms-prd-drop-content">
@@ -201,10 +201,10 @@
                         <a aria-label="Usos" class="collapsible">
                             <div class="ms-prd-drop-div">
                                 <div class="ms-prd-divtitle">
-                                    <img src="https://misionessabor.com/images/icons/heart-solid.svg"></img>
+                                    <img src="https://misionessabor.com/images/icons/heart-solid.svg" height="25" width="25"></img>
                                     <h3 class="ms-prd-drop-title">Usos</h3>
                                 </div>
-                                <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg"></img> 
+                                <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg" width"25" height"25"></img> 
                             </div>
                         </a>
                         <div class="ms-prd-drop-content">
@@ -224,7 +224,7 @@
                                     <i <img src="https://misionessabor.com/images/icons/mug-saucer-solid.svg"></img>
                                     <h3 class="ms-prd-drop-title">Preparación</h3>
                                 </div>
-                                <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg"></img> 
+                                <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg" width"25" height"25"></img> 
                             </div>
                         </a>
                         <div class="ms-prd-drop-content">
