--- a/policies/terms-of-service.html
+++ b/policies/terms-of-service.html
@@ -232,7 +232,7 @@
                 <div class="ms-poly-margin">
                     <a aria-label="Términos de la tienda en línea" class="collapsible">
                         <div class="ms-poly-dropcontent ms-collapsible">
-                            <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg"></img> 
+                            <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg" width"25" height"25"></img> 
                             <h2 class="ms-poly-title">
                                 Sección 1 | Términos de la tienda en línea
                             </h2>
@@ -272,7 +272,7 @@
 
                     <a aria-label="Condiciones Generales" class="collapsible">
                         <div class="ms-poly-dropcontent ms-collapsible">
-                            <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg"></img> 
+                            <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg" width"25" height"25"></img> 
                             <h2 class="ms-poly-title">
                                 Sección 2 | Condiciones Generales
                             </h2>
@@ -321,7 +321,7 @@
                 <div class="ms-poly-margin">
                     <a aria-label="Exactitud, Exhaustividad y Actualidad de la Información" class="collapsible">
                         <div class="ms-poly-dropcontent ms-collapsible">
-                            <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg"></img> 
+                            <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg" width"25" height"25"></img> 
                             <h2 class="ms-poly-title">
                                 Sección 3 | Exactitud, Exhaustividad y Actualidad de la Información
                             </h2>
@@ -347,7 +347,7 @@
                 <div class="ms-poly-margin">
                     <a aria-label="Modificaciones en el servicio y precios" class="collapsible">
                         <div class="ms-poly-dropcontent ms-collapsible">
-                            <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg"></img> 
+                            <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg" width"25" height"25"></img> 
                             <h2 class="ms-poly-title">
                                 Sección 4 | Modificaciónes en el servicio y precios
                             </h2>
@@ -371,7 +371,7 @@
                 <div class="ms-poly-margin">
                     <a aria-label="Productos o Servicios" class="collapsible">
                         <div class="ms-poly-dropcontent ms-collapsible">
-                            <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg"></img> 
+                            <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg" width"25" height"25"></img> 
                             <h2 class="ms-poly-title">
                                 Sección 5 | Productos o Servicios
                             </h2>
@@ -430,7 +430,7 @@
                 <div class="ms-poly-margin">
                     <a aria-label="Precisión de la facturación y la información de la cuenta" class="collapsible">
                         <div class="ms-poly-dropcontent ms-collapsible">
-                            <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg"></img> 
+                            <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg" width"25" height"25"></img> 
                             <h2 class="ms-poly-title">
                                 Sección 6 | Precisión de la facturación y la información de la cuenta.
                             </h2>
@@ -480,7 +480,7 @@
                 <div class="ms-poly-margin">
                     <a aria-label="Herramientas Opcionales" class="collapsible">
                         <div class="ms-poly-dropcontent ms-collapsible">
-                            <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg"></img> 
+                            <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg" width"25" height"25"></img> 
                             <h2 class="ms-poly-title">
                                 Sección 7 | Herramientas Opcionales
                             </h2>
@@ -524,7 +524,7 @@
                 <div class="ms-poly-margin">
                     <a aria-label="Enlaces de Terceros" class="collapsible">
                         <div class="ms-poly-dropcontent ms-collapsible">
-                            <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg"></img> 
+                            <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg" width"25" height"25"></img> 
                             <h2 class="ms-poly-title">
                                 Sección 8 | Enlaces de Terceros
                             </h2>
@@ -566,7 +566,7 @@
                 <div class="ms-poly-margin">
                     <a aria-label="Comentarios de Usuarios, Opiniones y otros Envíos" class="collapsible">
                         <div class="ms-poly-dropcontent ms-collapsible">
-                            <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg"></img> 
+                            <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg" width"25" height"25"></img> 
                             <h2 class="ms-poly-title">
                                 Sección 9 | Comentarios de Usuarios, Opiniones y otros Envíos
                             </h2>
@@ -633,7 +633,7 @@
                 <div class="ms-poly-margin">
                     <a aria-label="Información Personal" class="collapsible">
                         <div class="ms-poly-dropcontent ms-collapsible">
-                            <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg"></img> 
+                            <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg" width"25" height"25"></img> 
                             <h2 class="ms-poly-title">
                                 Sección 10 | Información Personal
                             </h2>
@@ -654,7 +654,7 @@
                 <div class="ms-poly-margin">
                     <a aria-label="Errores, Inexactitudes y Omisiones" class="collapsible">
                         <div class="ms-poly-dropcontent ms-collapsible">
-                            <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg"></img> 
+                            <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg" width"25" height"25"></img> 
                             <h2 class="ms-poly-title">
                                 Sección 11 | Errores, Inexactitudes y Omisiones.
                             </h2>
@@ -705,7 +705,7 @@
                 <div class="ms-poly-margin">
                     <a aria-label="Usos Prohibidos" class="collapsible">
                         <div class="ms-poly-dropcontent ms-collapsible">
-                            <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg"></img> 
+                            <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg" width"25" height"25"></img> 
                             <h2 class="ms-poly-title">
                                 Sección 12 | Usos Prohibidos
                             </h2>
@@ -756,7 +756,7 @@
                 <div class="ms-poly-margin">
                     <a aria-label="Renuncia de Garantías; Limitación de Responsabilidad" class="collapsible">
                         <div class="ms-poly-dropcontent ms-collapsible">
-                            <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg"></img> 
+                            <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg" width"25" height"25"></img> 
                             <h2 class="ms-poly-title">
                                 Sección 13 | Renuncia de Garantías; Limitación de Responsabilidad
                             </h2>
@@ -826,7 +826,7 @@
                 <div class="ms-poly-margin">
                     <a aria-label="Indemnización" class="collapsible">
                         <div class="ms-poly-dropcontent ms-collapsible">
-                            <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg"></img> 
+                            <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg" width"25" height"25"></img> 
                             <h2 class="ms-poly-title">
                                 Sección 14 | Indemnización
                             </h2>
@@ -852,7 +852,7 @@
                 <div class="ms-poly-margin">
                     <a aria-label="Divisibilidad" class="collapsible">
                         <div class="ms-poly-dropcontent ms-collapsible">
-                            <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg"></img> 
+                            <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg" width"25" height"25"></img> 
                             <h2 class="ms-poly-title">
                                 Sección 15 | Divisibilidad
                             </h2>
@@ -876,7 +876,7 @@
                 <div class="ms-poly-margin">
                     <a aria-label="Terminación" class="collapsible">
                         <div class="ms-poly-dropcontent ms-collapsible">
-                            <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg"></img> 
+                            <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg" width"25" height"25"></img> 
                             <h2 class="ms-poly-title">
                                 Sección 16 | Terminación
                             </h2>
@@ -921,7 +921,7 @@
                 <div class="ms-poly-margin">
                     <a aria-label="Acuerdo Completo" class="collapsible">
                         <div class="ms-poly-dropcontent ms-collapsible">
-                            <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg"></img> 
+                            <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg" width"25" height"25"></img> 
                             <h2 class="ms-poly-title">
                                 Sección 17 | Acuerdo Completo
                             </h2>
@@ -963,7 +963,7 @@
                 <div class="ms-poly-margin">
                     <a aria-label="Ley que Rige" class="collapsible">
                         <div class="ms-poly-dropcontent ms-collapsible">
-                            <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg"></img> 
+                            <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg" width"25" height"25"></img> 
                             <h2 class="ms-poly-title">
                                 Sección 18 | Ley que Rige
                             </h2>
@@ -981,7 +981,7 @@
                 <div class="ms-poly-margin">
                     <a aria-label="Cambios en los términos de servicio" class="collapsible">
                         <div class="ms-poly-dropcontent ms-collapsible">
-                            <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg"></img> 
+                            <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg" width"25" height"25"></img> 
                             <h2 class="ms-poly-title">
                                 Sección 19 | Cambios en los términos de servicio
                             </h2>
@@ -1021,7 +1021,7 @@
                 <div class="ms-poly-margin">
                     <a aria-label="Información de Contacto" class="collapsible">
                         <div class="ms-poly-dropcontent ms-collapsible">
-                            <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg"></img> 
+                            <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg" width"25" height"25"></img> 
                             <h2 class="ms-poly-title">
                                 Sección 20 | Información de Contacto
                             </h2>
