MS Update (Fixed SVG Icon "Chevron" attributes)

--- a/policies/privacy-policy.html
+++ b/policies/privacy-policy.html
@@ -184,7 +184,7 @@
                 <div class="ms-poly-margin">
                     <a aria-label="Información Personal que Recopilamos" class="collapsible">
                         <div class="ms-poly-dropcontent ms-collapsible">
-                            <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg" width"25" height"25"></img> 
+                            <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg" width="25" height="25"></img> 
                             <h2 class="ms-poly-title">
                                 Información Personal que Recopilamos
                             </h2>
@@ -254,7 +254,7 @@
                 <div class="ms-poly-margin">
                     <a aria-label="¿Cómo usamos su información personal?" class="collapsible">
                         <div class="ms-poly-dropcontent ms-collapsible">
-                            <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg" width"25" height"25"></img> 
+                            <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg" width="25" height="25"></img> 
                             <h2 class="ms-poly-title">
                                 ¿Cómo usamos su información personal?
                             </h2>
@@ -296,7 +296,7 @@
                 <div class="ms-poly-margin">
                     <a aria-label="Compartir su Información Personal" class="collapsible">
                         <div class="ms-poly-dropcontent ms-collapsible">
-                            <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg" width"25" height"25"></img> 
+                            <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg" width="25" height="25"></img> 
                             <h2 class="ms-poly-title">
                                 Compartir su Información Personal
                             </h2>
@@ -335,7 +335,7 @@
                 <div class="ms-poly-margin">
                     <a aria-label="Publicidad Conductual"class="collapsible">
                         <div class="ms-poly-dropcontent ms-collapsible">
-                            <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg" width"25" height"25"></img> 
+                            <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg" width="25" height="25"></img> 
                             <h2 class="ms-poly-title">
                                 Publicidad Conductual
                             </h2>
@@ -385,7 +385,7 @@
                 <div class="ms-poly-margin">
                     <a aria-label="No Rastrear" class="collapsible">
                         <div class="ms-poly-dropcontent ms-collapsible">
-                            <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg" width"25" height"25"></img> 
+                            <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg" width="25" height="25"></img> 
                             <h2 class="ms-poly-title">
                                 No Rastrear
                             </h2>
@@ -403,7 +403,7 @@
                 <div class="ms-poly-margin">
                     <a aria-label="Sus Derechos" class="collapsible">
                         <div class="ms-poly-dropcontent ms-collapsible">
-                            <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg" width"25" height"25"></img> 
+                            <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg" width="25" height="25"></img> 
                             <h2 class="ms-poly-title">
                                 Sus Derechos
                             </h2>
@@ -440,7 +440,7 @@
                 <div class="ms-poly-margin">
                     <a aria-label="Retención de Datos" class="collapsible">
                         <div class="ms-poly-dropcontent ms-collapsible">
-                            <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg" width"25" height"25"></img> 
+                            <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg" width="25" height="25"></img> 
                             <h2 class="ms-poly-title">
                                 Retención de Datos
                             </h2>
@@ -458,7 +458,7 @@
                 <div class="ms-poly-margin">
                     <a aria-label="Cambios" class="collapsible">
                         <div class="ms-poly-dropcontent ms-collapsible">
-                            <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg" width"25" height"25"></img> 
+                            <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg" width="25" height="25"></img> 
                             <h2 class="ms-poly-title">
                                 Cambios
                             </h2>
@@ -476,7 +476,7 @@
                 <div class="ms-poly-margin">
                     <a aria-label="Edad Mínima de Uso" class="collapsible">
                         <div class="ms-poly-dropcontent ms-collapsible">
-                            <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg" width"25" height"25"></img> 
+                            <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg" width="25" height="25"></img> 
                             <h2 class="ms-poly-title">
                                 Edad Minima de Uso
                             </h2>
@@ -492,7 +492,7 @@
                 <div class="ms-poly-margin">
                     <a aria-label="Contáctenos" class="collapsible">
                         <div class="ms-poly-dropcontent ms-collapsible">
-                            <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg" width"25" height"25"></img> 
+                            <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg" width="25" height="25"></img> 
                             <h2 class="ms-poly-title">
                                 Contáctenos
                             </h2>
