--- a/products/carqueja.html
+++ b/products/carqueja.html
@@ -191,10 +191,10 @@
                                     <img src="https://misionessabor.com/images/icons/leaf-solid.svg" height="25" width="25"></img>
                                     <h3 class="ms-prd-drop-title">Propiedades</h3>
                                 </div>
-                                <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg" width"25" height"25"></img> 
+                                <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg" width="25" height="25"></img> 
                             </div>
                         </a>
-                        <div class="ms-prd-drop-content">
+                        <div class="ms-prd-drop-content">|
                             <ul>
                                 <li>Anti-hepatotóxica.</li>
                                 <li>Es analgésica.</li>
@@ -210,7 +210,7 @@
                                     <img src="https://misionessabor.com/images/icons/heart-solid.svg" height="25" width="25"></img>
                                     <h3 class="ms-prd-drop-title">Usos</h3>
                                 </div>
-                                <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg" width"25" height"25"></img> 
+                                <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg" width="25" height="25"></img> 
                             </div>
                         </a>
                         <div class="ms-prd-drop-content">
@@ -229,7 +229,7 @@
                                     <i <img src="https://misionessabor.com/images/icons/mug-saucer-solid.svg"></img>
                                     <h3 class="ms-prd-drop-title">Preparación</h3>
                                 </div>
-                                <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg" width"25" height"25"></img> 
+                                <img src="https://misionessabor.com/images/icons/chevron-down-solid.svg" width="25" height="25"></img> 
                             </div>
                         </a>
                         <div class="ms-prd-drop-content">
