MS Update (Fixed problem #4,#5,#6,#7

--- a/products/flor-de-piedra.html
+++ b/products/flor-de-piedra.html
@@ -178,11 +178,10 @@
                 <div class="ms-product-divcontent">
                     <h1 class="ms-prd-h1">Flor de Piedra</h1>
                     <p class="ms-prd-price">$300 ARS</p>
-                    <h2 class="ms-prd-h2">Lophophytum leandri eichler</hAyuda especialmente a eliminar los cálculos renales y también 
-                        tiene efectos positivos para el hígado y el riñon.2>
+                    <h2 class="ms-prd-h2">Lophophytum leandri eichler</h2>
                     <p class="ms-prd-p">
-                        Ayuda especialmente a eliminar los cálculos renales y también tiene efectos positivos para el
-                        hígado y el riñon.
+                      Ayuda especialmente a eliminar los cálculos renales y también tiene efectos positivos para el
+                      hígado y el riñon.
                     </p>
                     <div>
                         <a aria-label="Propiedades" class="collapsible">
