MS Update (Fixed Error Fix Commit)

--- a/policies/terms-of-service.html
+++ b/policies/terms-of-service.html
@@ -223,10 +223,10 @@
                         hay cambios. Su uso continuado o acceso al sitio web después de la publicación de cualquier
                         cambio
                         constituye la aceptación de dichos cambios.</p>
-                    <p class="ms-poly-p">Nuestra tienda esta alojada en Shopify Inc. Ellos nos proporcionan la
+                    <!-- <p class="ms-poly-p">Nuestra tienda esta alojada en Shopify Inc. Ellos nos proporcionan la
                         plataforma de
                         comercio electrónico en línea (online e-commerce) que nos permite vender nuestros productos y
-                        servicios a usted.</p>
+                        servicios a usted.</p> -->
                 </div>
 
                 <div class="ms-poly-margin">
